<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstaintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background3"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-50sp"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/location"
                    tools:ignore="ContentDescription" />

                <AutoCompleteTextView
                    android:id="@+id/editLocation"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="-40sp"
                    android:autofillHints="Search"
                    android:background="@null"
                    android:hint="@string/enter_location"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColorHint="#78909C"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:backgroundTint="@null"
                    tools:ignore="TextFields" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="340dp"
                    android:layout_marginTop="-50dp"
                    android:background="@drawable/search"
                    android:text="@string/button"
                    android:textColor="@android:color/transparent"
                    app:backgroundTint="@null"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="10sp"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="200dp"
                android:layout_marginStart="100dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/mostly_cloudy"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/cloudy_sunny"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/datetime"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginStart="200dp"
                android:layout_marginTop="-130dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/_25_c"
                android:textColor="@color/white"
                android:textSize="62sp"
                android:layout_marginStart="200dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView4_1"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:text="@string/h_27"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView4_2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:text="@string/l_18"
                android:layout_marginTop="-22dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="28dp"
                android:background="@drawable/background2"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/thermometer"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_12_mm"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/precipitation"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/wind"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_12_km_h"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/humidity"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_18"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_weight="1"
                    android:text="@string/today"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />



            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourlyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                     />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>